--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
   <div class="form-group">
     <%= f.label :title, "Job Title" %>
     <br>
-    <%= f.number_field :Title, class: "form-control" %>
+    <%= f.number_field :title, class: "form-control" %>
   </div>
 
   <div class="form-group">
