--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,13 +22,13 @@
   <div class="form-group">
     <%= f.label :title, "Job Title" %>
     <br>
-    <%= f.number_field :title, class: "form-control" %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :email %>
     <br>
-    <%= f.number_field :email, class: "form-control" %>
+    <%= f.text_field :email, class: "form-control" %>
   </div>
 
   <div class="form-group">
@@ -40,7 +40,7 @@
   <div class="form-group">
     <%= f.label :password_confirmation, "Please confirm your password" %>
     <br>
-    <%= f.number_field :password_confirmation, class: "form-control" %>
+    <%= f.password_field :password_confirmation, class: "form-control" %>
   </div>
 
   <div class="form-group">
