fix errors in users show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,6 @@
     <p><strong>Name:</strong> <%= @user.name %></p>
     <p><strong>Job Title:</strong> <%= @user.title %></p>
     <p><%= link_to 'Edit', edit_user_path(@user) %></p>
-    <p><%= link_to 'Select a beneficiary', attractions_path %></p>
-    <p><%= link_to 'Edit a note', updates_path %></p>
+    <p><%= link_to 'Select a beneficiary', beneficiaries_path %></p>
   </div>
 </div>
