--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CaseManagementMvc</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
 </head>
+
 <body>
+
+    <ul class="navbar">
+      <% if current_user %>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Log Out", logout_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Sign Up", new_user_path %></li>
+        <li><%= link_to "Log In", login_path %></li>
+      <% end %>
+    </ul>
 
 <%= yield %>
 
