--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <ul class="navbar">
       <% if current_user %>
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Log Out", logout_path, method: :delete %></li>
+        <li><%= link_to "Log Out", logout_path %></li>
       <% else %>
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Sign Up", new_user_path %></li>
