--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,4 @@
-ul {
+ul.navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,11 +6,11 @@ ul {
     background-color: #333;
 }
 
-li {
+li.navbar {
     float: left;
 }
 
-li a {
+li.navbar a {
     display: block;
     color: white;
     text-align: center;
@@ -19,7 +19,7 @@ li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+li.navbar a:hover {
     background-color: #111;
 }
 
