--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,12 @@
 
     <ul class="navbar">
       <% if current_user %>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Log Out", logout_path %></li>
+        <li class="navbar"><%= link_to "Home", root_path %></li>
+        <li class="navbar"><%= link_to "Log Out", logout_path %></li>
       <% else %>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Sign Up", new_user_path %></li>
-        <li><%= link_to "Log In", login_path %></li>
+        <li class="navbar"><%= link_to "Home", root_path %></li>
+        <li class="navbar"><%= link_to "Sign Up", new_user_path %></li>
+        <li class="navbar"><%= link_to "Log In", login_path %></li>
       <% end %>
     </ul>
 
