--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
 <% @users.each do |user| %>
-<%= user.name %><br>
+<p> Name: <%= user.name %>, Position Title: <%= user.title %>
+  <%= link_to "See details", user_path(user) %></p>
 <% end %>
