add form to add updates to beneficiary

--- a/app/views/beneficiaries/show.html.erb
+++ b/app/views/beneficiaries/show.html.erb
@@ -15,4 +15,9 @@
     <p>ID number: <%= @beneficiary.id_number %></p>
     <p><%= link_to 'Edit', edit_beneficiary_path(@beneficiary) %></p>
   </div>
+
+  <h1>Add an Update</h1>
+
+  <%= render 'form_updates' %>
+
 </div>
