fix controller and form for nested routing for updates

--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -1,3 +1,5 @@
 <% @updates.each do |update| %>
 <p> Date: <%= update.created_at %> Notes: <%= update.notes %> %></p>
 <% end %>
+
+<%= link_to "Create New Note", new_beneficiary_update_path %>
