--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @update do |f| %>
+<%= form_for @update, url: beneficiary_updates_path(@beneficiary.id)  do |f| %>
   <% if @update.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -12,11 +12,6 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="form-group">
-    <%= f.hidden_field :user_id, :value => session[:user_id] %>
-    <%= f.hidden_field :beneficiary_id, :value => @beneficiary.id %>
-  </div>
 
   <div class="form-group">
     <%= f.label :notes %>
