fix edit links in user and beneficiary show, fix note format in updates index

--- a/app/views/beneficiaries/show.html.erb
+++ b/app/views/beneficiaries/show.html.erb
@@ -13,7 +13,7 @@
     <p>Date of Birth: <%= @beneficiary.date_of_birth %></p>
     <p>Gender: <%= @beneficiary.gender %></p>
     <p>ID number: <%= @beneficiary.id_number %></p>
-    <p><%= link_to 'Edit', edit_beneficiary_path(@beneficiary) %></p>
+    <p><%= link_to 'Edit Beneficiary Profile', edit_beneficiary_path(@beneficiary) %></p>
     <p><%= link_to 'View Case Notes', beneficiary_updates_path(@beneficiary) %></p>
   </div>
 </div>
