--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,6 @@
     <% end %>
     <p><strong>Name:</strong> <%= @user.name %></p>
     <p><strong>Job Title:</strong> <%= @user.title %></p>
-    <p><%= link_to 'Edit', edit_user_path(@user) %></p>
+    <p><%= link_to 'Edit User Profile', edit_user_path(@user) %></p>
   </div>
 </div>
