--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @update, url: beneficiary_updates_path(@beneficiary.id)  do |f| %>
+<%= form_for @update do |f| %>
   <% if @update.errors.any? %>
     <div id="error_explanation">
       <h2>
