--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -14,12 +14,20 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :notes %>
+    <%= f.hidden_field :user_id, :value => session[:user_id] %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label "Beneficiary" %>
     <br>
-    <%= f.text_field :notes, class: "form-control" %>
+    <%= f.collection_select :beneficiary_id, Beneficiary.all, :id, :name %>
+  </div>
+
+  <div class="form-group">
+    <%= f.text_area :notes, class: "form-control" %>
   </div>
 
   <div class="actions">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
