fix date error dob to date_of_birth in params

--- a/app/views/beneficiaries/_form.html.erb
+++ b/app/views/beneficiaries/_form.html.erb
@@ -22,7 +22,7 @@
   <div class="form-group">
     <%= f.label :date_of_birth, "Date of Birth" %>
     <br>
-    <%= f.datetime_field :date_of_birth, class: "form-control" %>
+    <%= f.date_field :date_of_birth, class: "form-control" %>
   </div>
 
   <div class="form-group">
