--- a/app/views/beneficiaries/index.html.erb
+++ b/app/views/beneficiaries/index.html.erb
@@ -2,3 +2,5 @@
 <p> Name: <%= beneficiary.name %>, ID Number: <%= beneficiary.id_number %>
   <%= link_to "See details", beneficiary_path(beneficiary) %></p>
 <% end %>
+
+<%= link_to "Create New Beneficiary", new_beneficiary_path %>
