--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -27,6 +27,12 @@
     <%= f.text_area :notes, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label "Complete" %>
+    <br>
+    <%= f.check_box :complete %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Submit", class: "btn btn-primary" %>
   </div>
