--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -24,6 +24,12 @@
   </div>
 
   <div class="form-group">
+    <%= f.label "Date" %>
+    <br>
+    <%= f.date_field :date %>
+  </div>
+
+  <div class="form-group">
     <%= f.text_area :notes, class: "form-control" %>
   </div>
 
