--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -9,4 +9,5 @@
   <%= link_to "Edit Note", edit_update_path(update) %></p>
 <% end %>
 
-<%= link_to "Create New Note", new_update_path %>
+<%= link_to "Create New Note", new_update_path %><br>
+<%= link_to "View Late Update Report", '/reports/late_updates' %>
