--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -10,4 +10,4 @@
 <% end %>
 
 <%= link_to "Create New Note", new_update_path %><br>
-<%= link_to "View Late Update Report", '/reports/late_updates' %>
+<%= link_to "View Late Update Report", reports_late_updates_path %>
