refactor using _notices in users, updates and beneficiaries for show

--- a/app/views/beneficiaries/show.html.erb
+++ b/app/views/beneficiaries/show.html.erb
@@ -1,10 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<% if @message %>
-  <div class="center alert">
-    <p><%= @message %></p>
-  </div>
-<% end %>
+<%= render '/users/notices' %>
 
 <div class="center">
 
