--- a/app/views/beneficiaries/show.html.erb
+++ b/app/views/beneficiaries/show.html.erb
@@ -4,7 +4,7 @@
 
   <div class="info">
     <p><strong>Name:</strong> <%= @beneficiary.name %></p>
-    <p>Date of Birth: <%= @beneficiary.date_of_birth.strftime("%B %d, %Y") if @beneficiary.date_of_birth %></p>
+    <p>Date of Birth: <%= @beneficiary.formatted_date_of_birth if @beneficiary.date_of_birth %></p>
     <p>Gender: <%= @beneficiary.gender %></p>
     <p>ID number: <%= @beneficiary.id_number %></p>
     <p><%= link_to 'Edit Beneficiary Profile', edit_beneficiary_path(@beneficiary) %></p>
