--- a/app/views/reports/late_updates.erb
+++ b/app/views/reports/late_updates.erb
@@ -1,6 +1,6 @@
 <h2> Late Updates </h2>
 
 <% @updates.each do |update| %>
-<p> Beneficiary: <%= update.beneficiary.name %>  Date: <%= update.date.strftime("%B %d, %Y") %> Note: <%= update.notes %> Complete: <%= check_box_tag :complete, 1, update.complete %>
+<p> Beneficiary: <%= update.beneficiary.name %>  Date: <%= update.formatted_date %> Note: <%= update.notes %> Complete: <%= check_box_tag :complete, 1, update.complete %>
   <%= link_to "Edit Note", edit_update_path(update) %></p>
 <% end %>
