--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <% @updates.each do |update| %>
-<p> Date: <%= update.date.strftime("%B %d, %Y") %> Note: <%= update.notes %> Complete: <%= check_box_tag :complete, 1, update.complete %>
+<p> Date: <%= update.formatted_date %> Note: <%= update.notes %> Complete: <%= check_box_tag :complete, 1, update.complete %>
   <%= link_to "Edit Note", edit_update_path(update) %></p>
 <% end %>
 
