fix css formatting

--- a/app/views/beneficiaries/_form.html.erb
+++ b/app/views/beneficiaries/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @beneficiary do |f| %>
   <% if @beneficiary.errors.any? %>
-    <div id="error_explanation">
+    <div class="field_with_errors">
       <h2>
         <%= pluralize(@beneficiary.errors.count, "error") %> prohibited this beneficiary from being saved:
       </h2>
