--- a/app/views/users/_notices.html.erb
+++ b/app/views/users/_notices.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <% if @message %>
-  <div class="center alert">
+  <div class="field_with_errors">
     <p><%= @message %></p>
   </div>
 <% end %>
