--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @update do |f| %>
   <% if @update.errors.any? %>
-    <div id="error_explanation">
+    <div class="field_with_errors">
       <h2>
         <%= pluralize(@update.errors.count, "error") %> prohibited this update from being saved:
       </h2>
