--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -6,8 +6,8 @@
 
 <% @updates.each do |update| %>
 <p> Date: <%= update.formatted_date %> Note: <%= update.notes %> Complete: <%= check_box_tag :complete, 1, update.complete %>
-  <%= link_to "Edit Note", edit_update_path(update) %></p>
+  <%= link_to "Edit Update", edit_update_path(update) %></p>
 <% end %>
 
-<%= link_to "Create New Note", new_update_path %><br>
+<%= link_to "Create New Update", new_update_path %><br>
 <%= link_to "View Late Update Report", reports_late_updates_path %>
