--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,10 @@ li.navbar a:hover {
 #notice {
     color: blue;
 }
+
+.errors {
+    color: red;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
