--- a/app/views/beneficiaries/_form.html.erb
+++ b/app/views/beneficiaries/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @beneficiary do |f| %>
   <% if @beneficiary.errors.any? %>
-    <div class="field_with_errors">
+    <div class="errors">
       <h2>
         <%= pluralize(@beneficiary.errors.count, "error") %> prohibited this beneficiary from being saved:
       </h2>
@@ -13,32 +13,19 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :name %>
-    <br>
-    <%= f.text_field :name, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :date_of_birth, "Date of Birth" %>
-    <br>
-    <%= f.date_field :date_of_birth, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :gender %>
-    <br>
-    <%= f.text_field :gender, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :id_number %>
-    <br>
-    <%= f.number_field :id_number, class: "form-control" %>
+  <div class="fields_with_errors">
+    <p><%= f.label :name %>:  <%= f.text_field :name %></p>
+    
+    <p><%= f.label :date_of_birth, "Date of Birth" %>:  <%= f.date_field :date_of_birth %></p>
+    
+    <p><%= f.label :gender %>:  <%= f.text_field :gender %></p>
+    
+    <p><%= f.label :id_number %>:  <%= f.number_field :id_number %></p>
+    
   </div>
 
   <div class="actions">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit %>
   </div>
 
 <% end %>
