--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @update do |f| %>
   <% if @update.errors.any? %>
-    <div class="field_with_errors">
+    <div class="errors">
       <h2>
         <%= pluralize(@update.errors.count, "error") %> prohibited this update from being saved:
       </h2>
@@ -13,33 +13,19 @@
     </div>
   <% end %>
 
-  <div class="form-group">
+  <div class="fields_with_errors">
     <%= f.hidden_field :user_id, :value => session[:user_id] %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label "Beneficiary" %>
-    <br>
-    <%= f.collection_select :beneficiary_id, Beneficiary.all, :id, :name %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label "Date" %>
-    <br>
-    <%= f.date_field :date %>
-  </div>
-
-  <div class="form-group">
-    <%= f.text_area :notes, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label "Complete" %>
-    <br>
-    <%= f.check_box :complete %>
+  
+    <p><%= f.label "Beneficiary" %>:  <%= f.collection_select :beneficiary_id, Beneficiary.all, :id, :name %></p>
+  
+    <p><%= f.label "Date" %>:  <%= f.date_field :date %></p>
+  
+    <p><%= f.label "Notes" %>:  <%= f.text_area :notes %></p>
+  
+    <p><%= f.label "Complete" %>:  <%= f.check_box :complete %></p>
   </div>
 
   <div class="actions">
-    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <%= f.submit "Submit" %>
   </div>
 <% end %>
