--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -1,11 +1,11 @@
 <% if @beneficiary.present? %>
-  <h2>Updates for <%= @beneficiary.name %></h2>
+  <h1>Updates for <%= @beneficiary.name %></h1>
 <% else %>
-  <h2> All Updates </h2>
+  <h1> All Updates </h1>
 <% end %>
 
 <% @updates.each do |update| %>
-<p> Date: <%= update.formatted_date %> Note: <%= update.notes %> Complete: <%= check_box_tag :complete, 1, update.complete %>
+<p> Date: <%= update.formatted_date %>, Note: <%= update.notes %>, Complete <%= check_box_tag :complete, 1, update.complete %>
   <%= link_to "Edit Update", edit_update_path(update) %></p>
 <% end %>
 
